map list now broken due to import of MatListModule, simple viewer mode, directions start+end selection, improve search, selectable interface imports

--- a/src/app/svg-edit/svg-edit.component.css
+++ b/src/app/svg-edit/svg-edit.component.css
@@ -27,3 +27,9 @@
 .floor-buttons button.mat-button, .tool-buttons button.mat-button {
     display: block;
 }
+
+.edit-button {
+    position: absolute;
+    bottom:32px;
+    right:32px;
+}
