--- a/src/app/home/map-list.component.html
+++ b/src/app/home/map-list.component.html
@@ -5,7 +5,9 @@
         <mat-divider></mat-divider>
         <mat-list-item [routerLink]="['/editor', '' + map.id]">{{map.name}}</mat-list-item>
         </div>
-        <button class="fab" mat-fab><mat-icon>add</mat-icon></button>
+        <button class="fab" mat-fab [routerLink]="['/editor', '-1']" matTooltip="Create a new map">
+            <mat-icon>add</mat-icon>
+        </button>
     </mat-nav-list>
 </mat-card>
 
