--- a/src/app/toolbar/toolbar.component.css
+++ b/src/app/toolbar/toolbar.component.css
@@ -2,7 +2,11 @@
     background-color: #4ABDAC;
     position: fixed;
     top:0;
+    z-index: 550;
 }
 .example-fill-remaining-space {
     flex: 1 1 auto;
+}
+mat-toolbar button {
+    padding: 0;
 }
