--- a/src/app/svg-edit/svg-edit.component.html
+++ b/src/app/svg-edit/svg-edit.component.html
@@ -68,7 +68,7 @@
      (mouseup)="mouse.onMouseUp($event)" (mousedown)="mouse.onMouseDown($event)"
      (mousemove)="mouse.onMouseMove($event)" (mouseleave)="mouse.onMouseLeave($event)"
      (touchend)="mouse.onMouseUp($event)" (touchstart)="mouse.onMouseDown($event)"
-     (touchmove)="mouse.onMouseMove($event)"
+     (touchmove)="mouse.onMouseMove($event)" (pinch)="mouse.onPinch($event)"
      (wheel)="mouse.onWheel($event)"
      xmlns:svg="http://www.w3.org/2000/svg" version="1.2">
 
