mouse-centered zoom, pinch to zoom

--- a/src/app/svg-edit/svg-edit.component.css
+++ b/src/app/svg-edit/svg-edit.component.css
@@ -9,10 +9,11 @@
 #editorCanvas {
     width: 50%;
     height: 500px;
-    border: 1px red dotted;
+    background-color: white; 
     user-select: none;
     user-drag: none;
     -webkit-user-drag: none;
+    box-sizing: content-box;
 }
 
 .panel {
