--- a/src/app/svg-edit/svg-edit.component.html
+++ b/src/app/svg-edit/svg-edit.component.html
@@ -99,7 +99,7 @@
                     [attr.x1]="portal.p1.x" [attr.y1]="portal.p1.y" [attr.x2]="portal.p2.x" [attr.y2]="portal.p2.y"
                     marker-end="url(#circle)" marker-start="url(#circle)"/>
             <svg:text *ngIf="showLabels" text-anchor="middle"
-                      [attr.x]="(portal.p1.x+portal.p2.x) / 2" [attr.y]="(portal.p1.y+portal.p2.y) / 2 + 20">
+                      [attr.x]="portal.center.x" [attr.y]="portal.center.y + 20">
                 {{portal.label}}
             </svg:text>
         </svg:g>
@@ -115,7 +115,7 @@
                       [attr.x2]="stairs.rearCenter.x" [attr.y2]="stairs.rearCenter.y"
                       marker-end="url(#solidArrow)"/>
             <svg:text *ngIf="showLabels" text-anchor="middle"
-                      [attr.x]="(stairs.p1.x+stairs.p2.x) / 2" [attr.y]="(stairs.p1.y+stairs.p2.y) / 2 + 20">
+                      [attr.x]="stairs.center.x" [attr.y]="stairs.center.y + 20">
                 {{stairs.label}}
             </svg:text>
         </svg:g>
