Work in progress: Issue #19

--- a/src/app/svg-edit/svg-edit.component.html
+++ b/src/app/svg-edit/svg-edit.component.html
@@ -1,3 +1,5 @@
+<app-toolbar></app-toolbar>
+
 <form id="toolbox" class="panel">
     <mat-form-field>
         <input matInput type="search" incremental name="search" [(ngModel)]="searchQuery" (search)="search()"
